# IngestLab

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.lite  README.md  TODO.md  database-schema.md  main.py  nixpacks.toml  package-lock.json  pyproject.toml  railpack.json  start_headless.sh
.claude/: CLAUDE.md
chunking_pipeline/: azure_pipeline.py  chunk_elements.py  chunker.py  custom_chunker.py  figure_processor.py  matcher.py  pac_dev.py  pages.py  pipeline.py  run_chunking.py  run_custom_chunker.py  unstructured_partition_pipeline.py
dataset/: gold.jsonl
scripts/: pac_dev.py  preview_unstructured_pages.py  run_azure_pipeline.py  run_chunking_pipeline.py  sample_analyze_layout.py
web/: config.py  extraction_jobs.py  feedback.py  file_utils.py  run_jobs.py  serve.py  server.py
web/routes/: __init__.py  admin.py  chunker.py  chunks.py  elements.py  extractions.py  feedback.py  images.py  pdfs.py  reviews.py  runs.py  tables.py
web/static/: app-chunks.js  app-cytoscape.js  app-elements-cards.js  app-elements-filter.js  app-elements-outline.js  app-elements.js  app-extraction-form.js  app-extraction-jobs.js  app-extraction-preview.js  app-extractions.js  app-feedback.js  app-images-figures.js  app-images-history.js  app-images-pipeline.js  app-images-upload.js  app-images.js  app-lightbox.js  app-metrics.js  app-modal.js  app-overlays.js  app-pdf.js  app-reviews.js  app-run-form.js  app-run-jobs.js  app-run-preview.js  app-runs.js  app-settings.js  app-state.js  app-theme.js  app-ui.js  app.js  base.css  chunks.css  components.css  drawer.css  elements.css  feedback.css  images.css  index.html  layout.css  (+5 more)
