[project]
name = "chunking-tests"
version = "5.0.4"
description = "Document ingestion sandbox for Azure Document Intelligence with custom chunking."
requires-python = ">=3.11,<3.12"
# Core dependencies for Azure DI + PolicyAsCode custom chunker
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "azure-ai-documentintelligence",
    "requests",
    "python-dotenv",
    "python-multipart",
    "pypdf",
    "pdf2image",
    "pdfminer.six",
    "openai",
    # Import extractors from PolicyAsCode (formerly BRD-Demo)
    "brd-to-opa-pipeline @ git+https://github.com/kyndryl-agentic-ai/PolicyAsCode.git",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
